@@ -393,7 +393,11 @@ setMethod("E", signature(object = "UnivariateCondDistribution",
                          cond = "numeric"),
     function(object, fun, cond, withCond = FALSE, useApply = TRUE, 
              low = NULL, upp = NULL, Nsim = getdistrExOption("MCIterations"), ...){
-        dotsFun <- .filterFunargs(list(...), fun, neg=FALSE)
+
+        dots <- list(...)
+        dotsFun <- .filterFunargs(dots, fun, neg=FALSE)
+        if("f1"%in% names(dots)) dotsFun[["f1"]] <- dots[["f1"]]
+
         funwD <- function(x) do.call(fun,c(list(x),dotsFun))
         xsim <- r(object)(Nsim, cond)
         if(is.null(low)) low <- -Inf
@@ -423,7 +427,10 @@ setMethod("E", signature(object = "AbscontCondDistribution",
              IQR.fac = getdistrExOption("IQR.fac"), ..., diagnostic = FALSE){
 
         mc <- match.call()
-        dotsFun <- .filterFunargs(list(...), fun, neg=FALSE)
+
+        dots <- list(...)
+        dotsFun <- .filterFunargs(dots, fun, neg=FALSE)
+        if("f1"%in% names(dots)) dotsFun[["f1"]] <- dots[["f1"]]
 
         CondArg <- if(withCond) list(cond=cond) else NULL
         funwD <- function(x) do.call(fun,c(list(x), CondArg,dotsFun))
@@ -460,7 +467,9 @@ setMethod("E", signature(object = "DiscreteCondDistribution",
                          cond = "numeric"),
     function(object, fun, cond, withCond = FALSE, useApply = TRUE, low = NULL, upp = NULL, ...){
 
-        dotsFun <- .filterFunargs(list(...), fun, neg=FALSE)
+        dots <- list(...)
+        dotsFun <- .filterFunargs(dots, fun, neg=FALSE)
+        if("f1"%in% names(dots)) dotsFun[["f1"]] <- dots[["f1"]]
 
         CondArg <- if(withCond) list(cond=cond) else NULL
         funwD <- function(x) do.call(fun,c(list(x), CondArg,dotsFun))
